username change by Ahsan

--- a/DocStatus/login.html
+++ b/DocStatus/login.html
@@ -12,7 +12,7 @@
       <h3 class="loginHeader">Log in</h3>
       <hr />
       <form action="">
-        <input class="usernameInputLogin" type="text" placeholder="Username" />
+        <input class="usernameInputLogin" type="text" placeholder="username" />
         <input
           class="passwordInputLogin"
           type="password"
